--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "^4.2.4",
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.3",
+    "angular2-markdown": "^1.6.0",
     "core-js": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "primeng": "^4.2.1",
     "rxjs": "^5.4.2",
     "semantic-ui": "^2.2.13",
     "zone.js": "^0.8.14"
