--- a/package.json
+++ b/package.json
@@ -4,16 +4,17 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "http-server",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "preinstall": "npm install -g http-server",
     "postinstall": "ng build && mv dist/* ."
   },
   "private": true,
   "dependencies": {
+    "@angular/cli": "1.3.2",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/animations": "^4.2.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
@@ -26,15 +27,17 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.3",
     "angular2-markdown": "^1.6.0",
+    "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "express": "^4.16.0",
     "font-awesome": "^4.7.0",
+    "mongodb": "^2.2.31",
     "primeng": "^4.2.1",
     "rxjs": "^5.4.2",
     "semantic-ui": "^2.2.13",
-    "zone.js": "^0.8.14",
-
-    "@angular/cli": "1.3.2",
-    "@angular/compiler-cli": "^4.2.4",
+    "zone.js": "^0.8.14"
+  },
+  "devDependencies": {
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
