--- a/package.json
+++ b/package.json
@@ -27,11 +27,11 @@
     "@ngrx/core": "^1.2.0",
     "@ngrx/store": "^2.2.3",
     "angular2-markdown": "^1.6.0",
+    "auth0-js": "^8.10.1",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
     "express": "^4.16.0",
     "font-awesome": "^4.7.0",
-    "mongodb": "^2.2.31",
     "pg": "6.4.2",
     "pg-transaction": "^1.0.4",
     "primeng": "^4.2.1",
