--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "auth0-js": "^8.10.1",
     "body-parser": "^1.18.2",
     "core-js": "^2.4.1",
+    "ejs": "^2.5.7",
     "express": "^4.16.0",
     "font-awesome": "^4.7.0",
     "pg": "6.4.2",
