--- a/package.json
+++ b/package.json
@@ -13,19 +13,20 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^4.2.4",
+    "@angular/animations": "^5.0.1",
     "@angular/cli": "1.3.2",
-    "@angular/common": "^4.2.4",
-    "@angular/compiler": "^4.2.4",
-    "@angular/compiler-cli": "^4.2.4",
-    "@angular/core": "^4.2.4",
-    "@angular/forms": "^4.2.4",
-    "@angular/http": "^4.2.4",
-    "@angular/platform-browser": "^4.2.4",
-    "@angular/platform-browser-dynamic": "^4.2.4",
-    "@angular/router": "^4.2.4",
+    "@angular/common": "^5.0.1",
+    "@angular/compiler": "^5.0.1",
+    "@angular/compiler-cli": "^5.0.1",
+    "@angular/core": "^5.0.1",
+    "@angular/forms": "^5.0.1",
+    "@angular/http": "^5.0.1",
+    "@angular/platform-browser": "^5.0.1",
+    "@angular/platform-browser-dynamic": "^5.0.1",
+    "@angular/platform-server": "^5.0.1",
+    "@angular/router": "^5.0.1",
     "@ngrx/core": "^1.2.0",
-    "@ngrx/store": "^2.2.3",
+    "@ngrx/store": "^4.1.1",
     "angular2-markdown": "^1.6.0",
     "auth0-js": "^8.10.1",
     "body-parser": "^1.18.2",
@@ -38,6 +39,7 @@
     "primeng": "^4.2.1",
     "rxjs": "^5.4.2",
     "semantic-ui": "^2.2.13",
+    "typescript": "^2.6.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
